--- a/static/index.ejs
+++ b/static/index.ejs
@@ -5,6 +5,7 @@
   <body>
   	<div>fhwpejwrkw[rjwprwr</div>
     <div id="root"></div>
+    <script src="/static/vendor.dll.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
