--- a/static/index.ejs
+++ b/static/index.ejs
@@ -6,6 +6,6 @@
   	<div>fhwpejwrkw[rjwprwr</div>
     <div id="root"></div>
     <script src="/static/vendor.dll.js"></script>
-    <script src="/static/bundle.js"></script>
+    <script src="/static/app.js"></script>
   </body>
 </html>
