--- a/static/index.ejs
+++ b/static/index.ejs
@@ -3,7 +3,10 @@
     <title>Todo App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+
+    </div>
+    <div id="J_demo" style="width: 500px; height: 700px"></div>
     <script src="/static/vendor.dll.js"></script>
     <script src="/static/app.js"></script>
   </body>
